--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,28 @@
-development:
+production:
   password: a2e863f37488faed0441ad6fd6f22c72
   theme_id: "64267077"
   store: the-gld-shop.myshopify.com
   timeout: 30s
+  ignore_files:
+    - "*.gif"
+    - "*.jpg"
+    - "*.png"
+    - "*.svg"
+    - "*.eot"
+    - "*.tff"
+    - "*.woff"
+    - config/settings_data.json
+development:
+  password: a2e863f37488faed0441ad6fd6f22c72
+  theme_id: "149887881"
+  store: the-gld-shop.myshopify.com
+  timeout: 30s
+  ignore_files:
+    - "*.gif"
+    - "*.jpg"
+    - "*.png"
+    - "*.svg"
+    - "*.eot"
+    - "*.tff"
+    - "*.woff"
+    - config/settings_data.json
